# QtTemplate

./: .gitignore  CMakeLists.txt  LICENSE  QuickTemplate.qmlproject  README.md  qmlModules  qmlmodules
Backend/: CMakeLists.txt  backend.cpp  backend.h
backend_mock/: CMakeLists.txt
backend_mock/Backend/: BackendMock.qml  CMakeLists.txt
content/: App.qml  CMakeLists.txt  MainScreen.ui.qml  Toggle.ui.qml
imports/: CMakeLists.txt
imports/QuickTemplate/: CMakeLists.txt  Constants.qml  qmldir
imports/QuickTemplate/designer/: plugin.metainfo
src/: app_environment.h  import_qml_plugins.h  main.cpp
